# eimemory

./: .gitignore  .mailmap  CHANGELOG.md  CONTRIBUTING.md  DEPLOY_RUNBOOK.md  FAQ.md  README.md  STATUS.md  pyproject.toml
deploy/: bootstrap_production_recall.py  capture_prior_health_snapshot.py  check_user_systemd_owner.sh  clean_release_bytecode.py  discover_python_runtime_units.sh  ensure_evidence_receipt_key.py  ensure_openclaw_bridge_config.py  ensure_rpc_auth.py  find_prior_immutable_release.py  governance.env.example  install_immutable_release.sh  install_managed_systemd_dropin.py  migrate_storage_release.py  patch_openclaw_restart_recovery_scope.py  record_deployment_receipt.py  rotate_console_token.py  run_with_governance_env.py  storage_release_transaction.py  summarize_release_closure.py  verify_openclaw_plugin_runtime.py  verify_release_health.py
docs/: COMPARISON.md  QUICKSTART.md  architecture.md  deployment.md  evaluation.md  github-recommendation.md  l5-roadmap-spec.md  openclaw-eimemory-loop-implementation-plan.md  operations.md  postgres-vector-candidates.md  reflective_replay_pilot.md
eimemory/: __init__.py  events.py  identity.py  identity_ops.py  judgment.py  metadata.py  runtime_identity.py  version.py
goals/: long_term.json
scripts/: _remote_download_lme.sh  _remote_install.sh  _remote_install2.sh  convert_locomo_to_eimemory.py  convert_longmemeval_to_eimemory.py  debug_lme.py  diagnose_locomo.py  download_longmemeval.py  inspect_locomo.py  inspect_longmemeval.py  karpathy_loop_cron.sh  openclaw_loop.py  probe_dataset_urls.py  ssh_run.py  (+9 more)
(+649 files in other folders)
