[project]
name = "eimemory"
version = "1.9.38"
description = "Local-first memory and evolution runtime for OpenClaw and eibrain."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
eimemory = "eimemory.cli.main:main"
eimemory-qmd = "eimemory.adapters.openclaw.qmd_compat:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["eimemory"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "slow: high-volume or performance-sensitive tests",
]
